# python_road

./: .vimrc  hard.py  med.py  test.py  test_2.txt
a_maz_ing/: a_maze_ing.py
a_mazing_steps/: cell_printing.py  generate_maze.py  grid_random_walking.py
call_me_maybe/call-me-maybe/: makefile  pyproject.toml
call_me_maybe/call-me-maybe/src/: __main__.py  constrainDecoder.py  funcDef.py  load_file.py  test.py
codex_last/: ARCHITECTURE.md  CORRECTION.md  Makefile  coders.c  dongles.c  ft_over.c  logtime.c  monitor.c  test_codexion.sh
codex_last/.claude/: settings.local.json
codexion/: Makefile  coders.c  codexion  codexion.h  dongles.c  ft_manager.c  ft_over.c  ft_req.c  ft_server.c  init.c  logtime.c  main.c  main.py  parser.c  server.c  var.c
codexion_v1/: README.md  coder_utils.c  coders.c  codexion  codexion.h  dongles.c  ft_over.c  helgrind.supp  init.c  logtime.c  main.c  monitor.c  parser.c  queue_utils.c  subject.md  test_codexion.sh  test_codexion_v1.sh
flay-in/: README.md  ft_parser.py  ft_pathfinder.py  ft_sim.py  ft_viewer.py  main.py  makefile  models.py
fly-in/: 01_linear_path.txt  README.md  errors.py  ft_config.py  ft_parser.py  ft_pathfinder.py  ft_sim.py  ft_valide_file.py  ft_viewer.py  main.py  makefile  models.py  parser.py  requirements.txt  test.txt  types.py
py06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
py07/: __init__.py
py08/ex01/: loading.py  pyproject.toml
py09/: data_exporter.py  data_generator.py  data_generator.tar
py10/: data_generator.py
pygame/: game_loop.py
(+109 files in other folders)
