[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
	"llm_sdk"

]

[tool.uv.sources]
llm_sdk = { path = "./llm_sdk",editable = true }  # if it has a pyproject.toml

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
]
